# mkdocs-version

./: README.md  README.rst  pyproject.toml  setup.py
mkdocs_version/: commands.py  version.py
script/: upload.py
