[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "Simple and easy-to-use mkdocs version based on git tags"
license = "Apache-2.0"
name = "mkdocs-version"
readme = "README.md"
version = "0.2.0"

homepage = "https://github.com/abersheeran/mkdocs-version"
repository = "https://github.com/abersheeran/mkdocs-version"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "mkdocs_version"},
]

[tool.poetry.scripts]
mkdocs-version = "mkdocs_version.commands:main"

[tool.poetry.dependencies]
python = "^3.6"

click = "^7.1.2"
cool = "^0.4.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
pytest = "^5.4.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
